tiny thing I wanna try, will making the height unit of the whole thing dvh instead of vh fix the issue where the url bar on mobile is clippling the footer

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,7 +18,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   box-sizing: border-box;
   background-color: black;
